CHROMIUM: cros_ec: Fix module related errors

- Use IF_EXIST and EXPORT_SYMBOL for sysfs entry point of
cros_ec_pd_update and cros_usbpd-charger.
- Fix cros_usbpd-charger driver name to match the compiled .ko.

BUG=chromium:617704
TEST=On chell, check the modules load and sysfs parameters are present.

Change-Id: Ic12d9f84b5df430d5a66d09f2fad636853e56266
Signed-off-by: Gwendal Grignou <gwendal@chromium.org>
Reviewed-on: https://chromium-review.googlesource.com/350890
Reviewed-by: Guenter Roeck <groeck@google.com>